# Vigil

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/vigil-core/: Cargo.toml
crates/vigil-core/src/: db.rs  eval.rs  lib.rs  planner.rs  tests.rs  types.rs  values.rs
crates/vigil-core/src/databases/: mod.rs
crates/vigil-core/src/queries/: events.rs  mod.rs  orderer.rs
crates/vigil-core/src/resources/: department-grouping-having.eql  department-grouping-ordered.eql  department-grouping.eql  query_agg_distinct.eql  query_agg_functions.eql  query_agg_skip.eql  query_agg_top.eql  query_distinct.eql  query_event_types.eql  query_from_events.eql  query_order_by.eql  query_order_by_desc.eql  query_skip.eql  query_subjects.eql  query_top.eql  simple-sub-query.eql
crates/vigil-core/src/snapshots/: vigil_core__tests__append.snap  vigil_core__tests__illegal_subject.snap  vigil_core__tests__query_agg_distinct.snap  vigil_core__tests__query_agg_functions.snap  vigil_core__tests__query_agg_skip.snap  vigil_core__tests__query_agg_top.snap  vigil_core__tests__query_distinct.snap  vigil_core__tests__query_event_types.snap  vigil_core__tests__query_order_by.snap  vigil_core__tests__query_order_by_desc.snap  vigil_core__tests__query_skip.snap  vigil_core__tests__query_subjects.snap  vigil_core__tests__query_top.snap  vigil_core__tests__run_query_department_grouping.snap  vigil_core__tests__run_query_department_grouping_having.snap  vigil_core__tests__run_query_department_grouping_ordered.snap  vigil_core__tests__run_query_from_events.snap  (+1 more)
(+28 files in other folders)
