[package]
name = "vigil-core"
version.workspace = true
authors.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eventql-parser = "0.1"
serde_json = "1"
thiserror = "2"
rand = "0.9"

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dev-dependencies.insta]
version = "1.44"
features = ["yaml"]

