[package]
name = "vigil-core"
version.workspace = true
authors.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eventql-parser = "0.1"
serde_json = "1"
thiserror = "2"
rand = "0.9"
case_insensitive_hashmap = "1"

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.ordered-float]
version = "5"
default-features = false
features = ["serde"]

[dev-dependencies.insta]
version = "1.44"
features = ["yaml"]

